--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "dotslashapp",
+  "name": "dotslash4.0",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "author": "littlestar642",
+  "author": "Team Dotslash",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
