--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "firebase": "^8.1.1",
+    "firebase-admin": "^9.4.1",
     "hbs": "^4.1.1"
   },
   "devDependencies": {
