updates -text compression -images resized + compressed

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Team Dotslash",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.16.4",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
