delete zone identifiers + use npm for materialize-css

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.4",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
