--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
     "hbs": "^4.1.1",
-    "materialize-css": "^1.0.0-rc.2"
+    "materialize-css": "^1.0.0-rc.2",
+    "mongoose": "^6.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
