--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,5 +18,6 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: 22
           script: |
-            pwd
-            deploy
+            cd ${{ secrets.PROJECT_PATH }}
+            git pull
+            pm2 restart 0
