--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,5 +19,5 @@ jobs:
           port: 22
           script: |
             cd ${{ secrets.PROJECT_PATH }}
-            git pull
+            git pull --quiet
             pm2 restart 0
