--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,6 +18,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: 22
           script: |
+            deploy
             cd ${{ secrets.PROJECT_PATH }}
             git pull --quiet
             pm2 restart 0
